--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -2,11 +2,14 @@
 FROM node:20-alpine
 
 ARG NODE_ENV=development
+ARG GIT_COMMIT_SHA
 
 ENV PNPM_HOME=/root/.local/share/pnpm \
     PATH=/root/.local/share/pnpm:$PATH \
     NEXT_TELEMETRY_DISABLED=1 \
     NODE_ENV=${NODE_ENV} \
+    VERCEL_GIT_COMMIT_SHA=${GIT_COMMIT_SHA} \
+    NEXT_PUBLIC_VERCEL_GIT_COMMIT_SHA=${GIT_COMMIT_SHA} \
     PORT=3000 \
     APP_SERVER_PORT=3001 \
     REALTIME_BASE_PATH=/realtime \
