--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -1,4 +1,6 @@
 # Production Dockerfile bundling the Next.js app and realtime server
+ARG GIT_COMMIT_SHA
+
 FROM node:20-alpine AS deps
 ENV PNPM_HOME=/root/.local/share/pnpm \
     PATH=/root/.local/share/pnpm:$PATH \
@@ -10,10 +12,13 @@ COPY package.json pnpm-lock.yaml ./
 RUN SKIP_PRISMA_POSTINSTALL=1 PRISMA_SKIP_POSTINSTALL_GENERATE=1 pnpm install --frozen-lockfile
 
 FROM node:20-alpine AS builder
+ARG GIT_COMMIT_SHA
 ENV PNPM_HOME=/root/.local/share/pnpm \
     PATH=/root/.local/share/pnpm:$PATH \
     NODE_ENV=production \
     NEXT_TELEMETRY_DISABLED=1 \
+    VERCEL_GIT_COMMIT_SHA=${GIT_COMMIT_SHA} \
+    NEXT_PUBLIC_VERCEL_GIT_COMMIT_SHA=${GIT_COMMIT_SHA} \
     REALTIME_BASE_PATH=/realtime \
     NEXT_PUBLIC_REALTIME_URL=/realtime \
     NEXT_PUBLIC_REALTIME_PATH=/realtime/socket.io \
@@ -28,10 +33,13 @@ RUN pnpm build
 RUN pnpm prune --prod
 
 FROM node:20-alpine AS runner
+ARG GIT_COMMIT_SHA
 ENV PNPM_HOME=/root/.local/share/pnpm \
     PATH=/root/.local/share/pnpm:$PATH \
     NODE_ENV=production \
     NEXT_TELEMETRY_DISABLED=1 \
+    VERCEL_GIT_COMMIT_SHA=${GIT_COMMIT_SHA} \
+    NEXT_PUBLIC_VERCEL_GIT_COMMIT_SHA=${GIT_COMMIT_SHA} \
     PORT=3000 \
     APP_SERVER_PORT=3001 \
     REALTIME_BASE_PATH=/realtime \
