--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "predev": "node scripts/run-prisma-migrate.mjs",
     "dev": "next dev --turbopack",
+    "prebuild": "pnpm prisma:generate",
     "build": "next build --turbopack",
     "prestart": "node scripts/run-prisma-migrate.mjs",
     "postinstall": "node -e \"if(!process.env.SKIP_PRISMA_POSTINSTALL){require('child_process').execSync('pnpm prisma:generate',{stdio:'inherit'})}\"",
