--- a/package.json
+++ b/package.json
@@ -40,9 +40,11 @@
     "next": "15.5.3",
     "next-auth": "^4.24.11",
     "nodemailer": "^6.9.12",
+    "pdfkit": "^0.17.2",
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
     "prisma": "6.16.2",
+    "qrcode": "^1.5.4",
     "react": "19.1.0",
     "react-big-calendar": "^1.14.0",
     "react-dom": "19.1.0",
@@ -61,6 +63,8 @@
     "@tailwindcss/postcss": "^4",
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
+    "@types/pdfkit": "^0.17.3",
+    "@types/qrcode": "^1.5.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/sanitize-html": "^2.16.0",
