feat(sperrliste): annotate calendar with Saxony school holidays

--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,9 @@ DATABASE_URL=postgresql://postgres:postgres@localhost:5432/theater?schema=public
 # Mirror to the client to avoid hydration mismatches ("1" enables dev-only login)
 NEXT_PUBLIC_AUTH_DEV_NO_DB=0
 
+# Optional: ICS feed for sächsische Schulferien. Wird genutzt, um die Sperrliste zu annotieren.
+#SAXONY_HOLIDAYS_ICS_URL=https://www.schulferien.org/media/ical/deutschland/ferien_sachsen.ics
+
 # Realtime service authentication
 REALTIME_AUTH_TOKEN=replace-with-realtime-token
 REALTIME_SERVER_TOKEN=replace-with-realtime-token
