--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "lucide-react": "^0.544.0",
     "next": "15.5.3",
     "next-auth": "^4.24.11",
+    "node-ical": "^0.21.0",
     "nodemailer": "^6.9.12",
     "pdfkit": "^0.17.2",
     "postcss": "^8.5.6",
