feat: add static saxony holiday fallback

--- a/.env.example
+++ b/.env.example
@@ -14,6 +14,8 @@ NEXT_PUBLIC_AUTH_DEV_NO_DB=0
 
 # Optional: ICS feed for sächsische Schulferien. Wird genutzt, um die Sperrliste zu annotieren.
 #SAXONY_HOLIDAYS_ICS_URL=https://www.schulferien.org/media/ical/deutschland/ferien_sachsen.ics
+# Optional: Deaktiviert ausgehende HTTP-Abfragen und aktiviert den statischen Ferien-Datensatz.
+#OUTBOUND_HTTP_DISABLED=0
 
 # Realtime service authentication
 REALTIME_AUTH_TOKEN=replace-with-realtime-token
