Ensure realtime server can access shared analytics data

--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -53,6 +53,7 @@ COPY --from=builder /app/prisma ./prisma
 COPY --from=builder /app/scripts ./scripts
 COPY --from=builder /app/realtime-server ./realtime-server
 COPY --from=builder /app/src/data ./src/data
+COPY --from=builder /app/src/lib ./src/lib
 
 EXPOSE 3000
 
