Update Saxony holiday ICS feed

--- a/.env.example
+++ b/.env.example
@@ -13,7 +13,7 @@ DATABASE_URL=postgresql://postgres:postgres@localhost:5432/theater?schema=public
 NEXT_PUBLIC_AUTH_DEV_NO_DB=0
 
 # Optional: ICS feed for sächsische Schulferien. Wird genutzt, um die Sperrliste zu annotieren.
-#SAXONY_HOLIDAYS_ICS_URL=https://www.schulferien.org/media/ical/deutschland/ferien_sachsen.ics
+#SAXONY_HOLIDAYS_ICS_URL=https://www.feiertage-deutschland.de/kalender-download/ics/schulferien-sachsen.ics
 # Optional: Deaktiviert ausgehende HTTP-Abfragen und aktiviert den statischen Ferien-Datensatz.
 #OUTBOUND_HTTP_DISABLED=0
 
