--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "@prisma/client": "6.16.2",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-select": "^2.1.6",
+    "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "@react-email/components": "^0.5.3",
     "@react-email/render": "^1.2.3",
     "@sendgrid/mail": "^8.1.6",
