--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@hookform/resolvers": "^5.2.1",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "6.16.2",
+    "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-separator": "^1.1.7",
