--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "geist": "^1.5.1",
     "http-proxy": "^1.18.1",
     "lucide-react": "^0.544.0",
     "next": "15.5.3",
