Restore dev test login shortcuts

--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,8 @@ DATABASE_URL=postgresql://postgres:postgres@localhost:5432/theater?schema=public
 
 # Mirror to the client to avoid hydration mismatches ("1" enables dev-only login)
 NEXT_PUBLIC_AUTH_DEV_NO_DB=0
+# Optional: Override the quick login buttons shown on /login in dev/test environments.
+#NEXT_PUBLIC_AUTH_DEV_TEST_USERS=member@example.com,cast@example.com,tech@example.com
 
 # Optional: ICS feed for sächsische Schulferien. Wird genutzt, um die Sperrliste zu annotieren.
 #SAXONY_HOLIDAYS_ICS_URL=https://www.feiertage-deutschland.de/kalender-download/ics/schulferien-sachsen.ics
