--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,10 @@ DATABASE_URL=postgresql://postgres:postgres@localhost:5432/theater?schema=public
 
 # Mirror to the client to avoid hydration mismatches ("1" enables dev-only login)
 NEXT_PUBLIC_AUTH_DEV_NO_DB=0
+# Enable the PWA service worker and offline capabilities ("1" enables, "0" disables).
+NEXT_PUBLIC_PWA_ENABLED=0
+# Maximum number of queued mutations that are flushed per sync cycle.
+SYNC_BATCH_LIMIT=50
 # Optional: Override the quick login buttons shown on /login in dev/test environments.
 #NEXT_PUBLIC_AUTH_DEV_TEST_USERS=member@example.com,cast@example.com,tech@example.com
 
