--- a/package.json
+++ b/package.json
@@ -33,12 +33,16 @@
     "@react-email/render": "^1.2.3",
     "@sendgrid/mail": "^8.1.6",
     "@tanstack/react-query": "^5.87.4",
+    "@zxing/browser": "^0.1.4",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "dexie": "^4.0.4",
+    "dexie-observable": "4.0.1-beta.13",
     "geist": "^1.5.1",
     "http-proxy": "^1.18.1",
+    "idb-keyval": "^6.2.1",
     "lucide-react": "^0.544.0",
     "next": "15.5.3",
     "next-auth": "^4.24.11",
@@ -60,11 +64,16 @@
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tailwind-variants": "^3.1.1",
+    "workbox-background-sync": "^7.1.0",
+    "workbox-routing": "^7.1.0",
+    "workbox-strategies": "^7.1.0",
+    "workbox-window": "^7.1.0",
     "zod": "^4.1.8"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/dexie": "^1.3.35",
     "@types/node": "^24",
     "@types/pdfkit": "^0.17.3",
     "@types/qrcode": "^1.5.5",
