--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
-    "dexie": "^4.0.4",
+    "dexie": "4.0.4",
     "dexie-observable": "4.0.1-beta.13",
     "geist": "^1.5.1",
     "http-proxy": "^1.18.1",
