Fix onboarding invite PDF generation

--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "date-fns": "^4.1.0",
     "dexie": "4.0.4",
     "dexie-observable": "4.0.1-beta.13",
+    "fontkit": "^2.0.4",
     "geist": "^1.5.1",
     "http-proxy": "^1.18.1",
     "idb-keyval": "^6.2.1",
