--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@react-email/render": "^1.2.3",
     "@sendgrid/mail": "^8.1.6",
     "@tanstack/react-query": "^5.87.4",
+    "@tanstack/react-table": "^8.21.3",
     "@zxing/browser": "^0.1.4",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
