--- a/package.json
+++ b/package.json
@@ -74,6 +74,8 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@playwright/test": "^1.55.1",
+    "@prisma/adapter-pg": "^6.16.2",
     "@tailwindcss/postcss": "^4",
     "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^16.3.0",
@@ -87,7 +89,9 @@
     "@types/sanitize-html": "^2.16.0",
     "eslint": "^9",
     "eslint-config-next": "15.5.3",
+    "fake-indexeddb": "^6.2.2",
     "jsdom": "^27.0.0",
+    "pg-mem": "^3.0.5",
     "tailwindcss": "^4",
     "tailwindcss-animate": "^1.0.7",
     "tw-animate-css": "^1.3.8",
