Fix CI pnpm setup

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "theater-website",
   "version": "0.1.0",
   "private": true,
+  "packageManager": "pnpm@9.15.9",
   "scripts": {
     "predev": "node scripts/run-prisma-migrate.mjs",
     "dev": "next dev --turbopack",
