--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -3,7 +3,7 @@ name: Build and Push Docker Image
 on:
   push:
     branches:
-      - main
+      - dev
     paths:
       - '.github/workflows/docker-publish.yml'
       - 'Dockerfile.dev'
