feat: add webhook-driven auto deploy service

--- a/.env.example
+++ b/.env.example
@@ -79,3 +79,17 @@ CORS_ORIGIN=https://devtheater.beegreenx.de
 #REALTIME_SERVER_URL=https://prodtheater.beegreenx.de/realtime
 #CORS_ORIGIN=https://prodtheater.beegreenx.de
 #REALTIME_CORS_ORIGIN=https://prodtheater.beegreenx.de
+
+# ------------------------------------------------------------------------------
+# Auto-deploy webhook service (docker-compose.autodeploy.yml)
+# ------------------------------------------------------------------------------
+#AUTO_DEPLOY_GIT_REMOTE_URL=git@github.com:ORG/Website.git
+#AUTO_DEPLOY_WEBHOOK_SECRET=replace-with-strong-secret
+#AUTO_DEPLOY_TARGET_BRANCH=main
+#AUTO_DEPLOY_ENV=prod
+#AUTO_DEPLOY_SERVICE_NAME=app-prod
+#AUTO_DEPLOY_COMPOSE_FILE=/opt/worktree/docker-compose.hosting.yml
+#AUTO_DEPLOY_PROJECT_NAME=theater
+#AUTO_DEPLOY_LISTEN_PORT=3000
+#AUTO_DEPLOY_WEBHOOK_PORT=9000
+#AUTO_DEPLOY_WEBHOOK_PATH=/webhook
