--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -25,6 +25,7 @@ on:
       - 'prisma/**'
       - 'realtime-server/**'
       - 'scripts/**'
+      - 'deploy-service/**'
   workflow_dispatch:
 
 env:
@@ -118,3 +119,40 @@ jobs:
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           build-args: ${{ matrix.build_args }}
+
+  build-and-push-deploy-service:
+    if: github.event_name != 'pull_request' && github.ref == 'refs/heads/main'
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+    name: Build and Push Deploy Service Image
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v5
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PAT }}
+
+      - name: Extract Docker metadata (deploy-service)
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: ${{ env.WEBSITE_IMAGE_NAME }}
+          tags: |
+            type=raw,value=deploy-service
+
+      - name: Build and push deploy-service Docker image
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          file: deploy-service/Dockerfile
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
