--- a/deploy-service/Dockerfile
+++ b/deploy-service/Dockerfile
@@ -10,6 +10,7 @@ RUN apt-get update \
         git \
         gnupg \
         lsb-release \
+        openssh-client \
     && mkdir -p /etc/apt/keyrings \
     && curl -fsSL https://download.docker.com/linux/debian/gpg | gpg --dearmor -o /etc/apt/keyrings/docker.gpg \
     && echo "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.gpg] https://download.docker.com/linux/debian $(lsb_release -cs) stable" \
