Run initial deploy when auto-deploy service starts

--- a/.env.example
+++ b/.env.example
@@ -99,3 +99,4 @@ CORS_ORIGIN=https://devtheater.beegreenx.de
 #AUTO_DEPLOY_WEBHOOK_PATH=/webhook
 #AUTO_DEPLOY_CONTAINER_NAME=theater-autodeploy
 #AUTO_DEPLOY_INTERNAL_URL=http://theater-autodeploy:3000
+#AUTO_DEPLOY_RUN_ON_START=true
