Ensure dev screenshot session uses shared auth secret helper

--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,7 @@
 # Shared application secrets and toggles
 # ------------------------------------------------------------------------------
 AUTH_SECRET=change-me-with-a-long-random-string
+#NEXTAUTH_SECRET=mirror-auth-secret-when-using-nextauth-default
 DATABASE_URL=postgresql://postgres:postgres@localhost:5432/theater?schema=public
 
 # Mirror to the client to avoid hydration mismatches ("1" enables dev-only login)
