--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "dexie": "4.0.4",
     "dexie-observable": "4.0.1-beta.13",
     "fontkit": "^2.0.4",
+    "framer-motion": "^12.23.22",
     "geist": "^1.5.1",
     "http-proxy": "^1.18.1",
     "idb-keyval": "^6.2.1",
